@@ -1,6 +1,7 @@
 iowow (1.0.3) UNRELEASED; urgency=medium
 
   * Added basic iowow.3 man page to distribution archive
+  * Use posix_fallocate() to extend iwkv file instead of ftruncate() on Linux/FreeBSD
 
  -- Anton Adamansky <adamansky@gmail.com>  Mon, 09 Apr 2018 23:46:33 +0700
 
